# godot-template

./: .clang-format  .gitignore  CMakeLists.txt
source/: register_types.cpp  register_types.hpp  template_node.cpp  template_node.hpp
source/nodes/: controlled_player_body.cpp  controlled_player_body.hpp
source/utils/: input_queue.cpp  input_queue.hpp
